@@ -1,5 +1,6 @@
 	* Fix Issue #48: Move "re" in lambda capture list in "regex_check".
 	* Fix Issue #55: Restore warnings for Clang builds.
+	* Fix Issue #57: Avoid uneeded-member-function warning from Clang.
 
 v28 2017-07-24
 
